--- a/src/containers/containers.scss
+++ b/src/containers/containers.scss
@@ -2,6 +2,7 @@
 @import './image-overlay/image-overlay';
 @import './fly-border/fly-border';
 @import './surf-container/surf-container';
+@import './photo-hexa/photo-hexa';
 
 // Containers
 //
