--- a/styleguide/exp-ui/commons/commons.css
+++ b/styleguide/exp-ui/commons/commons.css
@@ -1,39 +1,1 @@
-.x-br-1 {
-  border: 1px solid rgba(0, 0, 0, 0.5);
-}
-
-.x-br-rd-small {
-  border-radius: 0.5rem;
-}
-
-.x-br-dott {
-  border-style: dotted;
-}
-
-.x-pd-small {
-  padding: 0.5rem;
-}
-
-.x-pd-card {
-  padding: 1.2rem 0.5rem;
-}
-
-.x-mg-small {
-  margin: 0.5rem;
-}
-
-.x-mg-card {
-  margin: 1.2rem 0.5rem;
-}
-
-.x-bg-overlay {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-
-.x-bg-black {
-  background-color: #333333;
-}
-
-p.x-white-text, div.x-white-text, article.x-white-text {
-  color: #FFF;
-}
+.x-br-1{border:1px solid rgba(0,0,0,.5)}.x-br-rd-small{border-radius:.5rem}.x-br-dott{border-style:dotted}.x-pd-small{padding:.5rem}.x-pd-card{padding:1.2rem .5rem}.x-mg-small{margin:.5rem}.x-mg-card{margin:1.2rem .5rem}p.x-white-text,div.x-white-text,article.x-white-text{color:#fff}.x-hg-5r{height:5rem}.x-hg-6r{height:6rem}.x-hg-7r{height:7rem}.x-hg-8r{height:8rem}.x-wd-5r{width:5rem}.x-wd-6r{width:6rem}.x-wd-7r{width:7rem}.x-wd-8r{width:8rem}.x-wd-50{width:50%}
