--- a/styleguide/exp-ui/components/components.css
+++ b/styleguide/exp-ui/components/components.css
@@ -1,166 +1,1 @@
-@charset "UTF-8";
-/*
- Button
-
- Button style & normalize.
-
- Markup:
-  <div class="x-grid-row">
-    <div class="x-grid-col-50">
-      <button class="x-button {{modifier_class}}" > 
-        Button → 
-      </button>
-    </div>
-    <div class="x-grid-col-50">
-      <a href="#" class="x-button {{modifier_class}}" > 
-        Button → 
-      </a>
-    </div>
-  </div>
-
- .x-button-alt - A blue button.
- .x-button-black - Black Theme.
- .x-button-alert - Alert Theme
- .x-button-white - White Theme
- .x-button-disabled - Disabled Theme
-
- Styleguide Components.1
-*/
-.x-button {
-  display: inline-block;
-  font-weight: bold;
-  border-radius: 1.3rem;
-  border: none;
-  margin: 0 0.5rem;
-  min-height: 2.5rem;
-  box-sizing: border-box;
-  font-size: 1rem;
-  padding: 0 1rem;
-  transition: all 0.3s ease;
-  text-decoration: none;
-  vertical-align: middle;
-  line-height: 2.5rem;
-  white-space: nowrap;
-  width: 80%;
-  text-align: center;
-}
-.x-button.x-button-disabled, .x-button[disabled] {
-  cursor: no-drop;
-  opacity: 0.5;
-}
-.x-button:focus {
-  outline: none;
-  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.5);
-}
-.x-button:hover {
-  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.5);
-  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
-  text-decoration: none;
-}
-.x-button:active {
-  box-shadow: inset 0 0 9px rgba(0, 0, 0, 0.7);
-}
-
-/*
- Input
-
- Input TEXT style.
- <div class="x-grid-row">
-    <div class="x-grid-col-50">
-      <div class="x-input-container">
-         <label class="x-input-title"> Titulo </label>
-         <input type="text" class="x-input-text" placeholder="Styliguide" />
-         <label class="x-input-message"> <!-- null message --> </label>
-      </div>
-    </div>
-    <div class="x-grid-col-50">
-      <div class="x-input-container">
-         <label class="x-input-title"> Titulo </label>
-         <input type="text" class="x-input-text" placeholder="Styliguide" />
-         <label class="x-input-message"> * Maximo 10 caracteres </label>
-      </div>
-    </div>
-    <div class="x-grid-col-50">
-      <div class="x-input-container x-input-error">
-         <label class="x-input-title"> Titulo </label>
-         <input type="text" class="x-input-text" value="Styliguide Fail" />
-         <label class="x-input-message "> * Maximo 10 caracteres </label>
-      </div>
-    </div>
-    <div class="x-grid-col-50">
-      <div class="x-input-container x-input-ok">
-         <label class="x-input-title"> Titulo </label>
-         <input type="text" class="x-input-text" value="Styliguide OK" />
-         <label class="x-input-message"> * Maximo 10 caracteres </label>
-      </div>
-    </div>
-  </div>
-
-
- ```markup
-
-  <!-- Input -->
-  <div class="x-input-container">
-      <label class="x-input-title"> Titulo </label>
-      <input type="text" class="x-input-text" placeholder="Styliguide" />
-      <label class="x-input-message"> <!-- message --> </label> <!-- optional -->
-  </div>
-  <!-- Input -->
-
-  <!-- Message Status -->
-  <div class="x-input-container {{ x-input-ok | x-input-error }} ">
-      <label class="x-input-title"> Titulo </label>
-      <input type="text" class="x-input-text" value="Input OK" />
-      <label class="x-input-message "> * Maximo 10 caracteres </label>
-  </div>
-  <!-- Message Status -->
-
-
-  ```
-
- Styleguide Components.2
- */
-.x-input-text {
-  padding: 0.5rem;
-  font-size: 1rem;
-  display: block;
-  line-height: 1.25rem;
-  border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.6);
-  box-sizing: border-box;
-  width: 100%;
-}
-.x-input-text:hover {
-  background-color: rgba(0, 0, 0, 0.025);
-}
-.x-input-container {
-  position: relative;
-  display: inline-block;
-  width: 100%;
-  padding: 0.5rem;
-  min-height: 5rem;
-  vertical-align: middle;
-}
-.x-input-message {
-  display: block;
-  font-style: italic;
-  opacity: 0.7;
-}
-.x-input-title {
-  display: block;
-  font-weight: bold;
-}
-.x-input-ok .x-input-text {
-  border-bottom-color: #A1CB00;
-  color: #A1CB00;
-}
-.x-input-ok .x-input-message {
-  color: transparent;
-}
-.x-input-error .x-input-text {
-  border-bottom-color: #ff4c4c;
-  color: #ff4c4c;
-}
-.x-input-error .x-input-message {
-  color: #ff4c4c;
-}
+.x-button{display:inline-block;border-radius:1.3rem;border:none;margin:0 .5rem;min-height:2.2rem;box-sizing:border-box;font-size:1rem;padding:0 1rem;transition:all .3s ease;text-decoration:none;vertical-align:middle;line-height:2.2rem;white-space:nowrap;width:80%;text-align:center}.x-button.x-button-disabled,.x-button[disabled]{cursor:no-drop;opacity:.5}.x-button:focus{outline:none;box-shadow:inset 0 0 3px rgba(0,0,0,.5)}.x-button:hover{box-shadow:inset 0 0 3px rgba(0,0,0,.5);text-shadow:0px 1px 1px rgba(0,0,0,.5);text-decoration:none}.x-button:active{box-shadow:inset 0 0 9px rgba(0,0,0,.7)}.x-input-text{padding:.5rem;font-size:1rem;display:block;line-height:1.25rem;border:none;border-bottom:1px solid rgba(0,0,0,.6);box-sizing:border-box;width:100%}.x-input-text:hover{background-color:rgba(0,0,0,.025)}.x-input-container{position:relative;display:inline-block;width:100%;padding:.5rem;min-height:5rem;vertical-align:middle}.x-input-message{display:block;font-style:italic;opacity:.7}.x-input-title{display:block;font-weight:bold}.x-input-ok .x-input-text{border-bottom-color:#a1cb00;color:#a1cb00}.x-input-ok .x-input-message{color:transparent}.x-input-error .x-input-text{border-bottom-color:#ff4c4c;color:#ff4c4c}.x-input-error .x-input-message{color:#ff4c4c}
