--- a/styleguide/exp-ui/font/font.css
+++ b/styleguide/exp-ui/font/font.css
@@ -1,5 +1,1 @@
-body {
-  font-family: "Quicksand", sans-serif;
-  font-weight: 300;
-  font-size: 14px;
-}
+body{font-family:"Dosis",sans-serif;font-weight:300;font-size:14px}
