--- a/src/commons/commons.scss
+++ b/src/commons/commons.scss
@@ -1,6 +1,14 @@
 
 
-// align
+/*
+
+Commons Styles
+
+Standardize the use of the most common CSS properties and avoid creating more selectors in the CCS Main
+
+Styleguide 2Commons
+
+*/
 
 
 
