--- a/src/layout/layouts.scss
+++ b/src/layout/layouts.scss
@@ -1,2 +1,8 @@
 @import './grid/grid';
 @import './normalize/normalize';
+
+// Layout
+//
+// Components and options for laying out , including wrapping containers, a powerful grid system, a flexible media object, and responsive utility classes.
+//
+// Styleguide Layout
