--- a/src/specificity/_specificity.scss
+++ b/src/specificity/_specificity.scss
@@ -1,3 +1,7 @@
+// Specificity
+// 
+// Styleguide 1Specificity
+
 // Prefix
 //
 // use 'x-' prefix to give efficient specificity.
@@ -13,7 +17,7 @@
 // }
 // ```
 // 
-// Styleguide Specificity.1
+// Styleguide 1Specificity.1
 
 
 
@@ -42,4 +46,4 @@
 //   }
 // ```
 //
-// Styleguide Specificity.2
+// Styleguide 1Specificity.2
