--- a/src/themes/experimentality/theme.scss
+++ b/src/themes/experimentality/theme.scss
@@ -1,8 +1,11 @@
 // Import variables SASS/SCSS 
 //
-// import variables colors from theme on <br>
+// install and import variables colors from theme
+// ```ssh
+//  npm install @experimentality/exp-ui
+// ```
 // ```css
-//  @import 'exp-ui/dist/theme/experimentality';
+//  @import '@experimentality/exp-ui/dist/theme/experimentality';
 // ```
 //
 //
@@ -127,4 +130,18 @@ p.x-bg-secondary, div.x-bg-secondary, article.x-bg-secondary{
 .x-img-ovl-layer:before, .x-img-hexa-img:before, .x-gradiant-primary{
   background: rgb(0,188,255);
   background: linear-gradient(90deg, rgba(0,188,255,1) 0%, rgba(161,203,0,1) 100%);
+}
+
+// Gradiant Secondary 
+// 
+// background gradiant `x-gradiant-secondary`
+//
+// Markup:
+// <div class="x-hg-5r x-gradiant-secondary">
+//  </div>
+//
+// Styleguide Brandlines.4
+.x-gradiant-secondary{
+  background: rgb(30,30,30);
+  background: linear-gradient(90deg, rgba(30,30,30,1) 0%, rgba(0,98,98,1) 50%, rgba(30,30,30,1) 100%);
 }
