--- a/styleguide/kss-assets/css/kss.css
+++ b/styleguide/kss-assets/css/kss.css
@@ -632,7 +632,7 @@ body {
   min-height: 100vh;
   padding: 20px;
   padding-top: 80px;
-  background: #f1f1f1;
+  background: #636363;
   transition: opacity 0.4s ease-out;
 }
 .kss-documentation.kss-state-active {
@@ -657,17 +657,18 @@ body {
 
 .kss-section {
   margin-bottom: 40px;
+  background-color: #FFF;
+  border-radius: .5rem;
+  overflow: hidden;
+  box-shadow: 0 0 6px -2px rgba(0,0,0,0.5);
 }
 
 .kss-section__content {
-  border: 1px solid #CCCCCC;
   padding: 1em;
-  background-color: #FFF;
   display: block;
-  border-radius: 1rem;
-  box-shadow: 0 0 7px -3px rgba(0, 0, 0, 0.7);
-  padding: 1.5rem 1rem;
+  padding: 1rem;
   transition: all .3s ease;
+  border-bottom: 1px solid #ececec;
 }
 .kss-section__content ol,
 .kss-section__content ul,
@@ -801,14 +802,10 @@ body {
 }
 
 .kss-section__modifiers {
-  border: 1px solid #CCCCCC;
   border-top: none;
   border-bottom: none;
   padding: 1em;
-  background: #FDFDFD;
   display: block;
-  border-radius: 1rem;
-  box-shadow: 0 0 7px -3px rgba(0, 0, 0, 0.7);
   padding: 1.2rem 1rem;
   transition: all .3s ease;
 }
