--- a/styleguide/kss-assets/css/kss.css
+++ b/styleguide/kss-assets/css/kss.css
@@ -379,7 +379,6 @@ body {
   top: 0;
   left: 0;
   display: block;
-  box-shadow: -10px 0 10px 10px rgba(34, 34, 34, 0.5);
   box-sizing: border-box;
   width: 85%;
   height: 100%;
@@ -464,7 +463,8 @@ body {
   transform: translateX(6px);
 }
 .kss-nav__item a.kss-state-active {
-  color: #A1CB00;
+  background-color: #A1CB00;
+  color: #FFF;
 }
 .kss-nav__item a.kss-state-active:hover .kss-nav__name {
   transform: none;
@@ -632,7 +632,7 @@ body {
   min-height: 100vh;
   padding: 20px;
   padding-top: 80px;
-  background: #636363;
+  background: #e5e5e5;
   transition: opacity 0.4s ease-out;
 }
 .kss-documentation.kss-state-active {
@@ -661,6 +661,15 @@ body {
   border-radius: .5rem;
   overflow: hidden;
   box-shadow: 0 0 6px -2px rgba(0,0,0,0.5);
+  max-width: 1300px;
+  margin: 3rem auto;
+}
+header.kss-section{
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  border-radius: 0;
+  right: 0px;
 }
 
 .kss-section__content {
